--- a/app/src/main/res/layout/fragment_score.xml
+++ b/app/src/main/res/layout/fragment_score.xml
@@ -5,7 +5,15 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	>
 	<data>
-
+		<variable
+			name="homeGoalScorerList"
+			type="java.util.List" />
+		<variable
+			name="awayGoalScorerList"
+			type="java.util.List" />
+		<variable
+			name="fragment"
+			type="id.ac.polinema.skor.fragments.ScoreFragment" />
 	</data>
 
 	<androidx.constraintlayout.widget.ConstraintLayout
@@ -43,6 +51,7 @@
 			android:layout_marginEnd="8dp"
 			android:layout_marginBottom="16dp"
 			android:text="Add Score Home"
+			android:onClick="@{(v) -> fragment.onAddHomeClick(v)}"
 			app:layout_constraintBottom_toTopOf="@+id/guideline"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent" />
@@ -55,6 +64,7 @@
 			android:layout_marginEnd="8dp"
 			android:layout_marginBottom="16dp"
 			android:text="Add Score Away"
+			android:onClick="@{(v) -> fragment.onAddAwayClick(v)}"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintHorizontal_bias="0.0"
@@ -71,6 +81,7 @@
 			android:id="@+id/text_home_score"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:text="@{String.valueOf(homeGoalScorerList.size())}"
 			android:textSize="64sp"
 			app:layout_constraintBottom_toTopOf="@+id/guideline"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -81,6 +92,7 @@
 			android:id="@+id/text_away_score"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:text="@{String.valueOf(awayGoalScorerList.size())}"
 			android:textSize="64sp"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -92,6 +104,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginBottom="8dp"
+			android:text="@{fragment.homeScorer}"
 			app:layout_constraintBottom_toTopOf="@+id/button_add_home"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent" />
@@ -101,6 +114,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginBottom="8dp"
+			android:text="@{fragment.awayScorer}"
 			app:layout_constraintBottom_toTopOf="@+id/button_add_away"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent" />
